# docs/swagger.json
@@ -124,11 +124,17 @@
                         }
                     },
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "page",
                         "name": "page",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "sort",
+                        "name": "sort",
+                        "in": "query"
                     }
                 ],
                 "responses": {
